--- a/index.html
+++ b/index.html
@@ -15,13 +15,50 @@
 </head>
 
 <body>
+    <header id="header">
+        <div class="header-container">
+            <h1 class="logo">Quickly</h1>
+            <div class="nav d-none d-md-block">
+                <ul class="p-0 m-0">
+                    <li><a href="#about">About us</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#blog">Our Blog</a></li>
+                    <li><a href="#downloads">Downloads</a></li>
+                </ul>
+            </div>
+            <div class="d-none d-md-block">
+                <button class="sign-up btn">Sign Up</button>
+                <button class="login btn">Login</button>
+            </div>
+            <div class="mobile d-block d-md-none">
+                <img id="menu-icon" class="menu-icon" src="/assets/icon-hamburger.svg" alt="">
+                <img id="close-icon" class="close-icon" src="/assets/icon-close.svg" alt="">
+            </div>
+        </div>
+        <div id="nav-mobile">
+            <ul class="p-0 m-0 d-flex flex-column align-items-center">
+                <li><a href="#about">About us</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#blog">Our Blog</a></li>
+                <li><a href="#downloads">Downloads</a></li>
+            </ul>
+            <div class="mt-3">
+                <button class="sign-up btn">Sign Up</button>
+                <button class="login btn">Login</button>
+            </div>
+
+        </div>
+    </header>
     <div class="container">
-        <h1 class="animate__animated animate__heartBeat">Hello World!</h1>
+
     </div>
 
     <script src="/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
