hero section done

--- a/index.html
+++ b/index.html
@@ -51,10 +51,20 @@
 
         </div>
     </header>
-    <div class="container">
-
-    </div>
-
+    <section id="hero-section">
+        <img class="banner" src="/assets/ballet.svg" alt="ballet">
+        <h1 class="hero-section-title mt-3">Get your most important tasks done in no time</h1>
+        <p class="description mt-3 mb-4">
+            Sign up for free and turbocharge your productivity today <br>
+            with the world’s best product management platform
+        </p>
+        <form action="">
+            <div class="email-input">
+                <input type="email" name="email" class="email" required placeholder='Enter your email'>
+                <button class="sign-up">Sign Up</button>
+            </div>
+        </form>
+    </section>
     <script src="/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
