team section done

--- a/index.html
+++ b/index.html
@@ -65,6 +65,60 @@
             </div>
         </form>
     </section>
+    <section id="team">
+        <h2 class="title">A team of exceptional people</h2>
+        <p class="description">
+            I want to fly like an angel flare on a ten feet snare I want to dance <br> until the sun comes I want to
+            fight
+            your cousin.
+        </p>
+        <div class="row mt-4">
+            <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
+                <img class="team-img mb-2" src="/assets/team-1.svg" alt="team">
+                <h2 class="team-member-name">Andy Howson</h2>
+                <p class="position">Chief Technology Officer</p>
+            </div>
+            <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
+                <img class="team-img mb-2" src="/assets/team-2.svg" alt="team">
+                <h2 class="team-member-name">Alison Hubert</h2>
+                <p class="position">Product Manager</p>
+            </div>
+            <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
+                <img class="team-img mb-2" src="/assets/team-3.svg" alt="team">
+                <h2 class="team-member-name">Hailey Chrispin</h2>
+                <p class="position">Product Leader</p>
+            </div>
+            <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
+                <img class="team-img mb-2" src="/assets/team-4.svg" alt="team">
+                <h2 class="team-member-name">Alison Hubert</h2>
+                <p class="position">Product Manager</p>
+            </div>
+            <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
+                <img class="team-img mb-2" src="/assets/team-5.svg" alt="team">
+                <h2 class="team-member-name">Christina Mandarin</h2>
+                <p class="position">Brand Strategist</p>
+            </div>
+            <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
+                <img class="team-img mb-2" src="/assets/team-6.svg" alt="team">
+                <h2 class="team-member-name">Alison Hubert</h2>
+                <p class="position">Product Manager</p>
+            </div>
+            <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
+                <img class="team-img mb-2" src="/assets/team-7.svg" alt="team">
+                <h2 class="team-member-name">Englebert Smyth</h2>
+                <p class="position">Business Development</p>
+            </div>
+            <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
+                <img class="team-img mb-2" src="/assets/team-8.svg" alt="team">
+                <h2 class="team-member-name">Alison Hubert</h2>
+                <p class="position">Product Manager</p>
+            </div>
+
+        </div>
+    </section>
+
+
+
     <script src="/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
