--- a/index.html
+++ b/index.html
@@ -65,7 +65,45 @@
             </div>
         </form>
     </section>
-    <section id="team">
+    <section id="feature-blocks">
+        <img class="feature-blocks-divider" src="/assets/feature-blocks-divider.svg" alt="">
+        <div class="feature-blocks-container">
+            <div class="content py-5">
+                <h2 class="title text-center text-md-start">What Quickly can do for you</h2>
+                <p class="description text-center text-md-start">We’re more than just anothe project management
+                    software.
+                </p>
+                <div class="row mt-5">
+                    <div class="col col-sm-6 col-lg-3 mb-3">
+                        <img class="feature-icon mb-4" src="/assets/icon-1.svg" alt="icon">
+                        <h3 class="feature-name">Save time when designing</h3>
+                        <p class="feature-description">Your new projects are simply a click away with our intuitive
+                            creation flow</p>
+                    </div>
+                    <div class="col col-sm-6 col-lg-3 mb-3">
+                        <img class="feature-icon mb-4" src="/assets/icon-2.svg" alt="icon">
+                        <h3 class="feature-name">Get updated on projects</h3>
+                        <p class="feature-description">You receive notifications whenever
+                            a team member finishes a task</p>
+                    </div>
+                    <div class="col col-sm-6 col-lg-3 mb-3">
+                        <img class="feature-icon mb-4" src="/assets/icon-3.svg" alt="icon">
+                        <h3 class="feature-name">Works on the web</h3>
+                        <p class="feature-description">Don’t download an application when you can just work in browser
+                        </p>
+                    </div>
+                    <div class="col col-sm-6 col-lg-3 mb-3">
+                        <img class="feature-icon mb-4" src="/assets/icon-4.svg" alt="icon">
+                        <h3 class="feature-name">Highly secure interface</h3>
+                        <p class="feature-description">Use biometrics, 2FA and more to
+                            ensure your security in here</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section id="team" class="mt-3 mt-md-5">
         <h2 class="title">A team of exceptional people</h2>
         <p class="description">
             I want to fly like an angel flare on a ten feet snare I want to dance <br> until the sun comes I want to
