free trial section done

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
-    <link href="/style/bootstrap.min.css" rel="stylesheet"
+    <link href="style/bootstrap.min.css" rel="stylesheet"
         integrity="T9eUh3FxNK25X8LZBcC14zfGh4b27qFXCaHRYh8y0ldL1I4eLEKt275arucRCUtp" crossorigin="anonymous">
     <!-- Animate CSS -->
     <link rel="stylesheet" href="style/animate.min.css">
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="style/main.css">
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <title>Quickly Landing Page</title>
@@ -35,8 +35,8 @@
                     <button class="login btn">Login</button>
                 </div>
                 <div class="mobile d-block d-md-none">
-                    <img id="menu-icon" class="menu-icon" src="/assets/icon-hamburger.svg" alt="">
-                    <img id="close-icon" class="close-icon" src="/assets/icon-close.svg" alt="">
+                    <img id="menu-icon" class="menu-icon" src="assets/icon-hamburger.svg" alt="">
+                    <img id="close-icon" class="close-icon" src="assets/icon-close.svg" alt="">
                 </div>
             </div>
             <div id="nav-mobile">
@@ -55,7 +55,7 @@
             </div>
         </header>
         <section id="hero-section">
-            <img class="banner" src="/assets/ballet.svg" alt="ballet">
+            <img class="banner" src="assets/ballet.svg" alt="ballet">
             <h1 class="hero-section-title mt-3">Get your most important tasks done in no time</h1>
             <p class="description mt-3 mb-4">
                 Sign up for free and turbocharge your productivity today <br>
@@ -69,7 +69,7 @@
             </form>
         </section>
         <section id="feature-blocks">
-            <img class="feature-blocks-divider" src="/assets/feature-blocks-divider.svg" alt="">
+            <img class="feature-blocks-divider" src="assets/feature-blocks-divider.svg" alt="">
             <div class="feature-blocks-container">
                 <div class="content py-5">
                     <h2 class="title text-center text-md-start">What Quickly can do for you</h2>
@@ -78,26 +78,26 @@
                     </p>
                     <div class="row mt-5">
                         <div class="col col-sm-6 col-lg-3 mb-3">
-                            <img class="feature-icon mb-4" src="/assets/icon-1.svg" alt="icon">
+                            <img class="feature-icon mb-4" src="assets/icon-1.svg" alt="icon">
                             <h3 class="feature-name">Save time when designing</h3>
                             <p class="feature-description">Your new projects are simply a click away with our intuitive
                                 creation flow</p>
                         </div>
                         <div class="col col-sm-6 col-lg-3 mb-3">
-                            <img class="feature-icon mb-4" src="/assets/icon-2.svg" alt="icon">
+                            <img class="feature-icon mb-4" src="assets/icon-2.svg" alt="icon">
                             <h3 class="feature-name">Get updated on projects</h3>
                             <p class="feature-description">You receive notifications whenever
                                 a team member finishes a task</p>
                         </div>
                         <div class="col col-sm-6 col-lg-3 mb-3">
-                            <img class="feature-icon mb-4" src="/assets/icon-3.svg" alt="icon">
+                            <img class="feature-icon mb-4" src="assets/icon-3.svg" alt="icon">
                             <h3 class="feature-name">Works on the web</h3>
                             <p class="feature-description">Don’t download an application when you can just work in
                                 browser
                             </p>
                         </div>
                         <div class="col col-sm-6 col-lg-3 mb-3">
-                            <img class="feature-icon mb-4" src="/assets/icon-4.svg" alt="icon">
+                            <img class="feature-icon mb-4" src="assets/icon-4.svg" alt="icon">
                             <h3 class="feature-name">Highly secure interface</h3>
                             <p class="feature-description">Use biometrics, 2FA and more to
                                 ensure your security in here</p>
@@ -105,6 +105,11 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section id="free-trial" class="py-3 py-md-5">
+            <p class="desc">Stop wasting time, start saving it</p>
+            <h1 class="title">Sign up for your free trial, with the <br> world’s best product tool</h1>
+            <button class="trial-btn mt-3 mt-md-4">Start your trial</button>
         </section>
         <section id="team" class="mt-3 mt-md-5">
             <h2 class="title">A team of exceptional people</h2>
@@ -115,42 +120,42 @@
             </p>
             <div class="row mt-4">
                 <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
-                    <img class="team-img mb-2" src="/assets/team-1.svg" alt="team">
+                    <img class="team-img mb-2" src="assets/team-1.svg" alt="team">
                     <h2 class="team-member-name">Andy Howson</h2>
                     <p class="position">Chief Technology Officer</p>
                 </div>
                 <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
-                    <img class="team-img mb-2" src="/assets/team-2.svg" alt="team">
+                    <img class="team-img mb-2" src="assets/team-2.svg" alt="team">
                     <h2 class="team-member-name">Alison Hubert</h2>
                     <p class="position">Product Manager</p>
                 </div>
                 <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
-                    <img class="team-img mb-2" src="/assets/team-3.svg" alt="team">
+                    <img class="team-img mb-2" src="assets/team-3.svg" alt="team">
                     <h2 class="team-member-name">Hailey Chrispin</h2>
                     <p class="position">Product Leader</p>
                 </div>
                 <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
-                    <img class="team-img mb-2" src="/assets/team-4.svg" alt="team">
+                    <img class="team-img mb-2" src="assets/team-4.svg" alt="team">
                     <h2 class="team-member-name">Alison Hubert</h2>
                     <p class="position">Product Manager</p>
                 </div>
                 <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
-                    <img class="team-img mb-2" src="/assets/team-5.svg" alt="team">
+                    <img class="team-img mb-2" src="assets/team-5.svg" alt="team">
                     <h2 class="team-member-name">Christina Mandarin</h2>
                     <p class="position">Brand Strategist</p>
                 </div>
                 <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
-                    <img class="team-img mb-2" src="/assets/team-6.svg" alt="team">
+                    <img class="team-img mb-2" src="assets/team-6.svg" alt="team">
                     <h2 class="team-member-name">Alison Hubert</h2>
                     <p class="position">Product Manager</p>
                 </div>
                 <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
-                    <img class="team-img mb-2" src="/assets/team-7.svg" alt="team">
+                    <img class="team-img mb-2" src="assets/team-7.svg" alt="team">
                     <h2 class="team-member-name">Englebert Smyth</h2>
                     <p class="position">Business Development</p>
                 </div>
                 <div class="col col-sm-6 col-md-4 col-lg-3 mb-3 team-member">
-                    <img class="team-img mb-2" src="/assets/team-8.svg" alt="team">
+                    <img class="team-img mb-2" src="assets/team-8.svg" alt="team">
                     <h2 class="team-member-name">Alison Hubert</h2>
                     <p class="position">Product Manager</p>
                 </div>
@@ -210,10 +215,10 @@
     </div>
 
 
-    <script src="/js/bootstrap.bundle.min.js"
+    <script src="js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
