--- a/index.html
+++ b/index.html
@@ -77,26 +77,26 @@
                         software.
                     </p>
                     <div class="row mt-5">
-                        <div class="col col-sm-6 col-lg-3 mb-3">
+                        <div class="col col-6 col-lg-3 mb-3">
                             <img class="feature-icon mb-4" src="assets/icon-1.svg" alt="icon">
                             <h3 class="feature-name">Save time when designing</h3>
                             <p class="feature-description">Your new projects are simply a click away with our intuitive
                                 creation flow</p>
                         </div>
-                        <div class="col col-sm-6 col-lg-3 mb-3">
+                        <div class="col col-6 col-lg-3 mb-3">
                             <img class="feature-icon mb-4" src="assets/icon-2.svg" alt="icon">
                             <h3 class="feature-name">Get updated on projects</h3>
                             <p class="feature-description">You receive notifications whenever
                                 a team member finishes a task</p>
                         </div>
-                        <div class="col col-sm-6 col-lg-3 mb-3">
+                        <div class="col col-6 col-lg-3 mb-3">
                             <img class="feature-icon mb-4" src="assets/icon-3.svg" alt="icon">
                             <h3 class="feature-name">Works on the web</h3>
                             <p class="feature-description">Don’t download an application when you can just work in
                                 browser
                             </p>
                         </div>
-                        <div class="col col-sm-6 col-lg-3 mb-3">
+                        <div class="col col-6 col-lg-3 mb-3">
                             <img class="feature-icon mb-4" src="assets/icon-4.svg" alt="icon">
                             <h3 class="feature-name">Highly secure interface</h3>
                             <p class="feature-description">Use biometrics, 2FA and more to
