social icons section done

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </header>
         <section id="hero-section">
             <img class="banner" src="assets/ballet.svg" alt="ballet">
-            <h1 class="hero-section-title mt-3">Get your most important tasks done in no time</h1>
+            <h1 class="hero-section-title mt-3">Get your most important <br> tasks done in no time</h1>
             <p class="description mt-3 mb-4">
                 Sign up for free and turbocharge your productivity today <br>
                 with the world’s best product management platform
@@ -111,6 +111,26 @@
             <h1 class="title">Sign up for your free trial, with the <br> world’s best product tool</h1>
             <button class="trial-btn mt-3 mt-md-4">Start your trial</button>
         </section>
+        <hr>
+        <div id="social-logos">
+            <p class="title">We work with some of the world’s <strong>leading</strong> companies</p>
+
+            <div class="row mt-5">
+                <div class="col col-12 col-sm-6 col-lg-3 mb-3">
+                    <img src="/assets/social-logo-1.svg" alt="logo">
+                </div>
+                <div class="col col-12 col-sm-6 col-lg-3 mb-3">
+                    <img src="/assets/social-logo-2.svg" alt="logo">
+                </div>
+                <div class="col col-12 col-sm-6 col-lg-3 mb-3">
+                    <img src="/assets/social-logo-3.svg" alt="logo">
+                </div>
+                <div class="col col-12 col-sm-6 col-lg-3 mb-3">
+                    <img src="/assets/social-logo-4.svg" alt="logo">
+                </div>
+            </div>
+        </div>
+        <hr>
         <section id="team" class="mt-3 mt-md-5">
             <h2 class="title">A team of exceptional people</h2>
             <p class="description">
