--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
-    <link href="style/bootstrap.min.css" rel="stylesheet"
-        integrity="T9eUh3FxNK25X8LZBcC14zfGh4b27qFXCaHRYh8y0ldL1I4eLEKt275arucRCUtp" crossorigin="anonymous">
+    <link href="style/bootstrap.min.css" rel="stylesheet" >
     <!-- Animate CSS -->
     <link rel="stylesheet" href="style/animate.min.css">
     <link rel="stylesheet" href="style/main.css">
