--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
 
             <div class="row mt-5">
                 <div class="col col-12 col-sm-6 col-lg-3 mb-3">
-                    <img src="/assets/social-logo-1.svg" alt="logo">
+                    <img src="assets/social-logo-1.svg" alt="logo">
                 </div>
                 <div class="col col-12 col-sm-6 col-lg-3 mb-3">
-                    <img src="/assets/social-logo-2.svg" alt="logo">
+                    <img src="assets/social-logo-2.svg" alt="logo">
                 </div>
                 <div class="col col-12 col-sm-6 col-lg-3 mb-3">
-                    <img src="/assets/social-logo-3.svg" alt="logo">
+                    <img src="assets/social-logo-3.svg" alt="logo">
                 </div>
                 <div class="col col-12 col-sm-6 col-lg-3 mb-3">
-                    <img src="/assets/social-logo-4.svg" alt="logo">
+                    <img src="assets/social-logo-4.svg" alt="logo">
                 </div>
             </div>
         </div>
